--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "preview": "vite preview"
   },
   "engines": {
-  "node": ">=16"
-},
+    "node": ">=16"
+  },
   "dependencies": {
+    "@vercel/speed-insights": "^1.1.0",
     "lucide-react": "^0.464.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
