--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "node": ">=16"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.4.1",
     "@vercel/speed-insights": "^1.1.0",
     "lucide-react": "^0.464.0",
     "react": "^18.3.1",
